AAE-22454 alter schema and specification implementation